# openairinterface5g

./: .cproject  .dockerignore  .gitignore  .gitmodules  .project  CHANNELEMULATOR.md  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  NOTES.md  README.md  Sequans_USRP_setup.md  SionnaRT_to_rfsim_integration.md  build-gnb-docker.sh  build_oai.sh  cir_conf.txt  cross compiler user guide.md  cross-arm.cmake  cu.conf  dApp_README.md  develop_test_patch.patch  du_20.conf  du_40.conf  gNB.conf  gnb.sa.band41.fr1.106PRB.usrpb210.conf  gnb.sa.band78.fr1.106PRB.usrpb210.conf  gnb.sa.band78.fr1.106PRB.usrpb210_amair-CN.conf  gnb_20.conf  gnb_40.conf  h --set-upstream origin ldpc_decoder_cuda  local-epel.repo  ninja-targets  oaienv  papiexample.c  phase_comp  ping_docker_compose.gdb.yml  ping_docker_compose.yml  run_oai.sh  run_ping_test.sh  run_ue_in_gdb.sh  (+9 more)
common/config/: CMakeLists.txt  config_cmdline.c  config_common.c  config_load_configmodule.c  config_load_configmodule.h  config_userapi.c
common/config/libconfig/: CMakeLists.txt  config_libconfig.c
common/config/yaml/: CMakeLists.txt  config_yaml.cpp
common/utils/rest_api/: CMakeLists.txt  nr_ue_rest_api.cpp
common/utils/threadPool/: CMakeLists.txt  bounded_notified_fifo.h  mpmc_if.cpp  mpmc_if.h  task_ans.c  task_ans.h  thread-pool.c  thread-pool.h
nfapi/open-nFAPI/fapi/: CMakeLists.txt
nfapi/tests/: CMakeLists.txt  nr_fapi_test.h
nfapi/tests/p5/: CMakeLists.txt  nr_fapi_config_request_test.c  nr_fapi_config_response_test.c  nr_fapi_error_indication_test.c  nr_fapi_param_request_test.c  nr_fapi_param_response_test.c  nr_fapi_start_request_test.c  nr_fapi_start_response_test.c  nr_fapi_stop_indication_test.c  nr_fapi_stop_request_test.c  nr_fapi_test.h
nfapi/tests/p7/: dci_payload_utils.h  nr_fapi_crc_indication_test.c  nr_fapi_dci_inversion_test.c  nr_fapi_dl_tti_request_test.c  nr_fapi_rx_data_indication_test.c  nr_fapi_slot_indication_test.c  nr_fapi_tx_data_request_test.c  nr_fapi_uci_indication_test.c  nr_fapi_ul_dci_request_test.c  nr_fapi_ul_tti_request_test.c
openair1/E3AP/: CMakeLists.txt  e3_agent.c  e3_agent.h  e3_connector.c  e3_connector.h  e3ap_handler.c  e3ap_handler.h
openair1/E3AP/MESSAGES/: CMakeLists.txt
openair1/PHY/nr_phy_common/: CMakeLists.txt
openair1/SIMULATION/TOOLS/: CMakeLists.txt  abstraction.c  ch_desc_proto.c  channel_pipeline.cu  channel_sim.c  gauss.c  llr_quantization.c  multipath_channel.c  multipath_channel.cu  multipath_tv_channel.c  noise_cuda.cu  oai_cuda.h  phase_noise.c  phase_noise.cu  random_channel.c  rangen_double.c  sim.h  taus.c  uci_on_pusch_decode.m
openair2/E2AP/: CMakeLists.txt  README.md
openair2/E2AP/RAN_FUNCTION/: CMakeLists.txt  init_ran_func.c  ran_func_gtp.c  ran_func_gtp.h  ran_func_kpm.c  ran_func_kpm.h  ran_func_mac.c  ran_func_mac.h  ran_func_pdcp.c  ran_func_pdcp.h  ran_func_rc.c  ran_func_rc.h  ran_func_rlc.c  ran_func_rlc.h  ran_func_slice.c  ran_func_slice.h  ran_func_tc.c  ran_func_tc.h  read_setup_ran.c
openair2/E2AP/agent/: CMakeLists.txt  asio_agent.c  plugin_agent.c
openair2/E2AP/test/: CMakeLists.txt
openair2/F1AP/: CMakeLists.txt  f1ap_common.c  f1ap_common.h  f1ap_cu_interface_management.c  f1ap_cu_interface_management.h  f1ap_cu_paging.c  f1ap_cu_position_information_transfer.c  f1ap_cu_position_information_transfer.c.orig  f1ap_cu_position_information_transfer.h  f1ap_cu_rrc_message_transfer.c  f1ap_cu_rrc_message_transfer.h  f1ap_cu_task.c  f1ap_cu_task.c.orig  f1ap_cu_task.h  f1ap_cu_ue_context_management.c  f1ap_cu_ue_context_management.h  f1ap_debug.c  f1ap_du_interface_management.c  f1ap_du_interface_management.h  f1ap_du_paging.c  f1ap_du_paging.h  f1ap_du_position_information_transfer.c  f1ap_du_position_information_transfer.c.orig  f1ap_du_position_information_transfer.h  f1ap_du_rrc_message_transfer.c  f1ap_du_task.c  f1ap_du_task.h  f1ap_du_ue_context_management.c  f1ap_du_ue_context_management.h  f1ap_encoder.c  f1ap_handlers.c  f1ap_ids.c  f1ap_ids.h  f1ap_itti_messaging.c  test.c
openair2/F1AP/MESSAGES/: CMakeLists.txt
openair2/F1AP/lib/: CMakeLists.txt  f1ap_interface_management.c  f1ap_interface_management.h  f1ap_lib_common.c  f1ap_lib_common.h  f1ap_lib_includes.h  f1ap_rrc_message_transfer.c  f1ap_rrc_message_transfer.h  f1ap_ue_context.c  f1ap_ue_context.h
openair2/F1AP/test/: CMakeLists.txt  cp_asn_to_ir.c  cp_asn_to_ir.h  cp_ir_to_asn.c  cp_ir_to_asn.h  gen_rnd_data.c  gen_rnd_data.h  test.c
openair2/F1AP/tests/: CMakeLists.txt  f1ap_lib_test.c
openair2/XNAP/: CMakeLists.txt  xnap_common.c  xnap_common.h  xnap_defs.h  xnap_gNB_decoder.c  xnap_gNB_decoder.h  xnap_gNB_defs.h  xnap_gNB_encoder.c  xnap_gNB_encoder.h  xnap_gNB_generate_messages.c  xnap_gNB_generate_messages.h  xnap_gNB_generate_messages_copy.c  xnap_gNB_handler.c  xnap_gNB_handler.h  xnap_gNB_handler_copy.c  xnap_gNB_interface_management.c  xnap_gNB_interface_management.h  xnap_gNB_itti_messaging.c  xnap_gNB_itti_messaging.h  xnap_gNB_management_procedures.c  xnap_gNB_management_procedures.h  xnap_gNB_task.c  xnap_gNB_task.h  xnap_ids.c  xnap_ids.h  xnap_inst_procedures_management.c  xnap_inst_procedures_management.h  xnap_task.c  xnap_timers.c  xnap_timers.h
openair2/tc/: CMakeLists.txt  README.md  main.c  oai_3gpp_38_331.h  pkt.c  pkt.h  plc_shp_pair.c  plc_shp_pair.h  sm_io.h  tc.c  tc.h  tc_api.c  tc_api.h
openair2/tc/cls/: CMakeLists.txt  cls.h
openair2/tc/pcr/: CMakeLists.txt  pcr.h
openair2/tc/plc/: plc.c  plc.h
openair2/tc/queue/: CMakeLists.txt  queue.h
openair2/tc/sch/: CMakeLists.txt  sch.h
openair2/tc/shp/: shp.c  shp.h
radio/USRP/: CMakeLists.txt  README.md  usrp_lib.cpp
radio/fd_rfsim/: CMakeLists.txt  README.md  fd_rfsim.c
radio/oc/: CMakeLists.txt  README.md  oc_lib.cpp
radio/rfsimulator/: CMakeLists.txt  README.md  apply_channelmod.c  broker  broker.c  rfsimulator.h  simulator.c  simulator_original.c  simulator_pub_sub.c  simulator_pubsub.c  simulator_rest_api.cpp  sync_service.c  sync_service.h  taps_loader.c  taps_loader.h
radio/vrtsim/: CMakeLists.txt  taps.fbs  taps_client.cpp  vrtsim.c
(+3955 files in other folders)
