add_library(vrtsim MODULE vrtsim.c noise_device.c)
set_target_properties(vrtsim PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
target_link_libraries(vrtsim PRIVATE SIMU shm_td_iq_channel actor taps_client)
add_dependencies(vrtsim generate_T)
set(TAPS_API_HEADER taps_generated.h)

add_custom_command(OUTPUT ${TAPS_API_HEADER}
  COMMAND flatc -c ${CMAKE_CURRENT_SOURCE_DIR}/taps.fbs
  DEPENDS taps.fbs
  COMMENT "Generating flatbuffers API from ${TAPS_IF_PATH}"
)
add_library(taps_api INTERFACE)
target_include_directories(taps_api INTERFACE ${CMAKE_CURRENT_BINARY_DIR})

add_library(taps_client taps_client.cpp ${TAPS_API_HEADER})
target_include_directories(taps_client PUBLIC .)
target_link_libraries(taps_client PUBLIC flatbuffers taps_api SIMU nanomsg)
