pkg_check_modules(libconfig REQUIRED libconfig)
add_library(params_libconfig MODULE config_libconfig.c)
target_include_directories(params_libconfig PRIVATE ${libconfig_INCLUDE_DIRS})
target_link_libraries(params_libconfig PRIVATE CONFIG_LIB ${libconfig_LIBRARIES})
set_target_properties(params_libconfig PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
