if (ENABLE_TESTS)
  add_subdirectory(test)
endif()
add_library(thread-pool thread-pool.c)
target_link_libraries(thread-pool PRIVATE utils mpmc_if)
target_include_directories(thread-pool PUBLIC .)

CPMAddPackage("gh:rigtorp/MPMCQueue#b9808ede08f26fa9df4df4e081d19cace8f6c6ea")
add_library(mpmc_if mpmc_if.cpp)
target_include_directories(mpmc_if PUBLIC .)
target_link_libraries(mpmc_if PUBLIC MPMCQueue::MPMCQueue)
target_compile_options(mpmc_if PRIVATE "-faligned-new")
